# cmager

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml
cmager/: __init__.py  __main__ .py  cli.py  pipeline.py
cmager/cellage/: __init__.py  predictor.py
cmager/cellage/models/: gamsel_list_coarse_light.rds
cmager/celltype/: __init__.py  hierarchical_filter.py  predictor.py
cmager/celltype/models/: foetal_heart_coarse_v3.pkl
cmager/r_source/: run_age_predictions.R  run_hierarchical_filter.R
cmager/r_source/functions/: CT_load_data.r  CT_prediction_functions.r  gam_modelling_functions.r
cmager/r_source/resources/: CvN.rds  cell_adjust_total.rds  coarse_colors.txt  fine_colors_split.txt  metadata_grains.rds  mid_colors.txt
cmager/utils/: __init__.py  gene_mapper.py  r_check.py
tests/: test_environment.yml  test_pipeline.py
tests/data/10x/H/: metadata.csv
tests/data/10x/J/: metadata.csv
tests/data/10x/N/: metadata.csv
tests/data/10x/Q/: metadata.csv
tests/data/10x/T/: metadata.csv
tests/data/10x/U/: metadata.csv
tests/data/h5ad_split/: H.h5ad  J.h5ad  N.h5ad  Q.h5ad  T.h5ad  U.h5ad
